@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libmuninn.la
 
 libmuninn_la_SOURCES = GE.cpp CGE.cpp Factories/CGEfactory.cpp Histories/MultiHistogramHistory.cpp MLE/MLE.cpp tools/CanonicalAverager.cpp utils/timer.cpp utils/MessageLogger.cpp utils/TArrayUtils.cpp utils/StatisticsLogger.cpp utils/StatisticsLogReader.cpp utils/utils.cpp utils/nonlinear/newton.cpp WeightSchemes/LinearPolatedWeights.cpp
 libmuninn_la_LDFLAGS = -static
-libmuninn_la_CXXFLAGS = -Wall -ansi -pedantic -Wno-long-long
+libmuninn_la_CXXFLAGS = -Wall -ansi -pedantic -Wno-long-long -Wno-enum-compare
 libmuninn_la_CPPFLAGS = $(EIGEN_CPPFLAGS)
 
 nobase_pkginclude_HEADERS = History.h ExtrapolatedWeightScheme.h UpdateScheme.h Histogram.h WeightScheme.h GE.h common.h CGE.h Binner.h Estimator.h Estimate.h Binners/NonUniformBinner.h Binners/NonUniformDynamicBinner.h Binners/UniformBinner.h Exceptions/MuninnException.h Exceptions/MessageException.h Exceptions/MaximalNumberOfBinsExceed.h Factories/CGEfactorySettingsException.h Factories/CGEfactory.h Histories/MultiHistogramHistory.h MLE/MLE.h MLE/MLEestimate.h MLE/utils/GMHequations.h MLE/utils/GMHequationsAccumulated.h tools/CanonicalAveragerFromStatisticsLog.h tools/CanonicalPropertiesFromStatisticsLog.h tools/CanonicalProperties.h tools/CanonicalAverager.h utils/TArrayReverseFlatIterator.h utils/TArrayBaseIterator.h utils/TArrayWhereTrueIterator.h utils/utils.h utils/MessageLogger.h utils/TArrayUtils.h utils/TArrayMismatchSizeException.h utils/TArrayMath.h utils/ArrayAligner.h utils/StatisticsLogReader.h utils/StatisticsLogger.h utils/TArrayMismatchShapeException.h utils/Loggable.h utils/TArrayReadErrorException.h utils/TArray.h utils/TArrayFlatIterator.h utils/BaseConverter.h utils/TArrayFlatIteratorCoord.h utils/timer.h utils/nonlinear/newton.h utils/nonlinear/NonlinearEquation.h utils/nonlinear/newton/LineSearchAlgorithm.h utils/nonlinear/newton/ErrorFunction.h utils/nonlinear/newton/NewtonRootFinder.h utils/polation/LinearPolator1dUniform.h utils/polation/AverageSlope.h utils/polation/SupportBoundaries.h utils/polation/Identity.h utils/polation/AverageSlope1dUniform.h utils/polation/LinearPolator.h WeightSchemes/LinearPolatedInvK.h WeightSchemes/LinearPolatedWeights.h WeightSchemes/FixedWeights.h WeightSchemes/Multicanonical.h WeightSchemes/InvK.h WeightSchemes/LinearPolatedMulticanonical.h
